Fixed an issue where some large images could blow out the screen when reading on mobile. Now images will force to be max of width of browser

--- a/UI/Web/src/app/book-reader/book-reader/book-reader.component.scss
+++ b/UI/Web/src/app/book-reader/book-reader/book-reader.component.scss
@@ -178,6 +178,10 @@ $primary-color: #0062cc;
     padding-inline-start: 0px
 }
 
+::ng-deep .scale-width {
+    max-width: 100%;
+}
+
 
 // Click to Paginate styles
 .icon-primary-color {
